# core_engineering-core

./: .gitignore  AGENTS.md  CHANGELOG.md  NEXT_STEPS.md  PROJECT_STATUS.md  README.md  catalog.json  disciplines  lanes  next-session-prompt.md  pyproject.toml
docs/: adoption.md  authority-map.md  discipline-lifecycle.md  vision.md
docs/releases/: 2026-05-17-v0.2.0-local-release.md  2026-05-17-v0.3.0-local-release.md  2026-05-17-v0.3.1-local-release.md  2026-05-19-v0.3.3-local-release.md  artifact-policy.md  release-workflow.md
docs/releases/migrations/: v0.2.0.md
lanes/: tech-stack-py.md
scripts/: check-justfile-addenda.py  release-local.py
src/engineering_core/: __init__.py  adoption_render.py  adoption_scan.py  catalog.json  cli.py
src/engineering_core/disciplines/: README.md  accessibility.md  ai-ml.md  build-graph-acceleration.md  data-governance.md  dependency-governance.md  design-patterns.md  design-system.md  documentation.md  domain-modeling.md  engineering-reasoning.md  local-first-data.md  observability.md  performance.md  release-package.md  security-privacy.md  service-api.md  specification-and-dsls.md  testing.md  validation.md
src/engineering_core/lanes/: engineering-cpp.cuda.md  engineering-cpp.justfile.md  engineering-cpp.md  engineering-elixir.justfile.md  engineering-elixir.md  engineering-go.justfile.md  engineering-go.md  engineering-pi-ts.justfile.md  (+11 more)
src/tech_stack_core/: cli.py
templates/: engineering.local.template.md  observability-plan.template.md  validation-tier-map.template.md
tests/: test_adoption_scan.py  test_cli.py
(+22 files in other folders)
