[project]
name = "tech-stack-core"
version = "0.1.0"
description = "Shared lane docs (Python/TypeScript/Go) for consistent project workflows, plus a small CLI."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "lightningralf" }]

[project.scripts]
tech-stack-core = "tech_stack_core.cli:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
