[project]
name = "engineering-core"
version = "0.3.0"
description = "Shared engineering lanes, cross-language disciplines, and CLI for consistent project workflows."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "lightningralf" }]

[project.scripts]
engineering-core = "engineering_core.cli:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
